--- a/amazon-ses-service/src/main/resources/templates/Emails/OrderMail.html
+++ b/amazon-ses-service/src/main/resources/templates/Emails/OrderMail.html
@@ -305,7 +305,7 @@ ul.social li{
           	<table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
           		<tr>
           			<td class="logo" style="text-align: left;">
-			            <h1><a href="#">Shop</a></h1>
+			            <h1><a href="#">Easy Electro Shop</a></h1>
 			          </td>
           		</tr>
           	</table>
@@ -317,8 +317,10 @@ ul.social li{
             	<tr>
             		<td style="padding: 0 2.5em; text-align: left;">
             			<div class="text">
-            				<h2>Ronald your shopping cart misses you</h2>
-            				<h3>Amazing deals, updates, interesting news right in your inbox</h3>
+            				<h2>Hi, <span th:text="${customerName}" th:remove="tag"></span> we have received your order!</h2>
+            				<h3>Order Details:</h3>
+							<h4>Order Id:  <span th:text="${orderId}" th:remove="tag"></span></h4>
+							<h4>Order Status:  <span th:text="${orderStatus}" th:remove="tag"></span></h4>
             			</div>
             		</td>
             	</tr>
@@ -334,16 +336,16 @@ ul.social li{
 					  <tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
 					  	<td valign="middle" width="80%" style="text-align:left; padding: 0 2.5em;">
 					  		<div class="product-entry">
-					  			<img src="images/prod-1.jpg" alt="" style="width: 100px; max-width: 600px; height: auto; margin-bottom: 20px; display: block;">
+					  			<img src="${coverImage}}" alt="" style="width: 100px; max-width: 600px; height: auto; margin-bottom: 20px; display: block;">
 					  			<div class="text">
-					  				<h3>Analog Wrest Watch</h3>
-					  				<span>Small</span>
-					  				<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					  			</div>
+					  				<h2><span th:text="${productName}" th:remove="tag"></span></h2>
+					  				<h3>Price: Rs. <span th:text="${price}" th:remove="tag"></span></h3>
+					  				<h3>Quantity: <span th:text="${quantity}" th:remove="tag"></span></h3>
+								</div>
 					  		</div>
 					  	</td>
 					  	<td valign="middle" width="20%" style="text-align:left; padding: 0 2.5em;">
-					  		<span class="price" style="color: #000; font-size: 20px;">$120</span>
+					  		<span class="price" style="color: #000; font-size: 20px;">Rs.<span th:text="${totalPrice}" th:remove="tag"></span></span>
 					  	</td>
 					  </tr>
 					  <tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
