--- a/amazon-ses-service/src/main/resources/templates/Emails/Order/OrderMail.html
+++ b/amazon-ses-service/src/main/resources/templates/Emails/Order/OrderMail.html
@@ -196,7 +196,7 @@ table{
 	margin: 0;
 }
 .logo h1 a{
-	color: #17bebb;
+	color: #D5B60A;
 	font-size: 24px;
 	font-weight: 700;
 	font-family: 'Work Sans', sans-serif;
