--- a/amazon-ses-service/src/main/resources/templates/Emails/Coupon/CouponMail.html
+++ b/amazon-ses-service/src/main/resources/templates/Emails/Coupon/CouponMail.html
@@ -303,7 +303,7 @@ ul.social li{
           <td valign="top" class="bg_white" style="padding: 1em 2.5em 0 2.5em;">
           	<table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
           		<tr>
-          			<td class="logo" style="text-align: center;">
+          			<td class="logo" style="text-align: center; padding-top: 5em">
 			            <h1><a href="#">Easy Electro Shop</a></h1>
 			          </td>
           		</tr>
@@ -314,14 +314,9 @@ ul.social li{
           <td valign="middle" class="hero bg_white" style="padding: 2em 0 2em 0;">
             <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
             	<tr>
-            		<td style="padding: 0 2.5em; text-align: left;">
+            		<td style="padding: 0 2.5em; text-align: center;">
             			<div class="text">
-            				<h2>Hi, <span th:text="${customerName}" th:remove="tag"></span> we have received your order!</h2>
-            				<h3>Order Details:</h3>
-
-							<h4>Order Id:  <span th:text="${orderId}" th:remove="tag"></span></h4>
-							<h4>Order Status:  <span th:text="${orderStatus}" th:remove="tag"></span></h4>
-							<h4>Created At:  <span th:text="${createdAt}" th:remove="tag"></span></h4>
+            				<h2>Hey, <span th:text="${customerName}" th:remove="tag"></span> we have a gift for you!</h2>
             			</div>
             		</td>
             	</tr>
@@ -330,69 +325,24 @@ ul.social li{
 	      </tr><!-- end tr -->
 	      <tr>
 	      	<table class="bg_white" role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
-	      		<tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
-					    <th width="80%" style="text-align:left; padding: 0 1.5em; color: #000; padding-bottom: 20px">Item(s)</th>
-					    <th width="20%" style="text-align:left; color: #000; padding-bottom: 20px">Price</th>
+	      		<tr style="border-bottom: 0px solid rgba(0,0,0,.05);">
+					    <td width="1000%" style="text-align:center; padding: 0 1.5em; color: #000; padding-bottom: 20px; font-size: 35px">
+							Shop now using the code <strong><span th:text="${couponCode}" th:remove="tag"></span></strong> and get <strong><span th:text="${discountPercentage}" th:remove="tag"></span>%</strong> off your complete order!
+						</td>
+
 				</tr>
-					<tr th:each="orderDetail : ${orderDetailList}" style="border-bottom: 1px solid rgba(0,0,0,.05);">
-						<td valign="middle" width="80%" style="text-align:left;">
-							<div class="product-entry">
-								<div class="text">
-									<p id="testID"></p>
-									<h2><span th:text="${orderDetail.productName}" th:remove="tag"></span></h2>
-									<h3>Price: Rs. <span th:text="${orderDetail.price}" th:remove="tag"></span></h3>
-									<h3>Quantity: <span th:text="${orderDetail.quantity}" th:remove="tag"></span></h3>
-									<br>
-								</div>
-							</div>
-						</td>
-						<td valign="middle" width="20%" style="text-align:left;">
-							<span class="price" style="color: #000; font-size: 20px;">Rs.<span th:text="${orderDetail.totalPrice}" th:remove="tag"></span></span>
-						</td>
-					</tr>
+				<tr style="border-bottom: 0px solid rgba(0,0,0,.05);">
+					<td width="1000%" style="text-align:center; padding: 0 1.5em; color: #000; padding-bottom: 20px; font-size: 35px">
+						Valid Upto <strong><span th:text="${validUpto}" th:remove="tag"></span></strong>
+					</td>
+
+				</tr>
 	      		</table>
-			  	<table class="bg_white" role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
-				  <tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
-					  <td valign="middle" width="80%" style="text-align:left; padding: 1em 1.5em">
-						  <h2>Subtotal:</h2>
-						  <h3>Shipping: </h3>
-						  <h3>Total: </h3>
-					  </td>
-					  <td valign="middle"  width="20%" style="text-align:left;">
-						  <span class="price" style="color: #000; font-size: 20px;">Rs.<span th:text="${totalContentPrice}" th:remove="tag"></span></span>
-						  <span class="price" style="color: #000; font-size: 20px;">Rs.<span th:text="${shippingCost}" th:remove="tag"></span></span>
-						  <span class="price" style="color: #000; font-size: 20px;">Rs.<span th:text="${totalOrderPrice}" th:remove="tag"></span></span>
-					  </td>
-				  </tr>
-			  </table>
+
 
 	      </tr><!-- end tr -->
-
       <!-- 1 Column Text + Button : END -->
       </table>
-      <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: auto;">
-      	<tr>
-          <td valign="middle" class="bg_light footer email-section">
-            <table>
-            	<tr>
-                <td valign="top" width="33.333%" style="padding-top: 20px;">
-                  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
-                    <tr>
-                      <td style="text-align: left; padding-right: 10px;">
-                      	<h3 class="heading">Customer Details</h3>
-                      	<h4><strong>Full Name:</strong> <span th:text="${customerName}" th:remove="tag"></span></h4>
-						  <h4><strong>Phone Number:</strong> <span th:text="${customerPhoneNumber}" th:remove="tag"></span></h4>
-						  <h4><strong>Address:</strong> <span th:text="${address}" th:remove="tag"></span></h4>
-                      </td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
-            </table>
-          </td>
-        </tr><!-- end: tr -->
-      </table>
-
     </div>
   </center>
 </body>
